Add rename files method

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # 1_UTILITIES
 1_Utilities/file-rename-with-undo/.venv/
+1_Utilities/file-rename-with-undo/test_folder/
 
 # 2_AUTOMATING 
 # Email sender
