Function to save renamed files to history_log.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # 1_UTILITIES
+1_Utilities/file-rename-with-undo/__pycache__
 1_Utilities/file-rename-with-undo/.venv/
 1_Utilities/file-rename-with-undo/test_folder/
 
